--- a/styles/style.css
+++ b/styles/style.css
@@ -1,142 +1,152 @@
-body {
-  font-family: "Open Sans";
-  margin: 0;
-}
-
-.nav-bar {
-  width: 350px;
-  list-style: none;
-  justify-content: space-between;
-  display: flex;
-  margin: 0 72%;
-  padding: 0;
-  z-index: 99;
-}
-
-.spotify-logo {
-  align-items: flex-start;
-  margin: 0;
-  display: block;
-  width: 10%;
-  height: auto;
-  padding: 14px 20px;
-  background-color: white;
-}
-
-.hero-image {
-  background-image: url("../images/landing.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-color: white;
-  position: relative;
-  width: 100vw;
-  height: 80vh;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-}
-
-.hero-image p {
-  text-align: center;
-  font-size: 25px;
-  color: #fff;
-  font-weight: lighter;
-  display: block;
-  height: 250px;
-  padding-top: 50px;
-}
-
-.hero-image h1 {
-  text-align: center;
-  font-size: 65px;
-  color: #fff;
-  font-weight: lighter;
-  display: block;
-  height: 250px;
-  padding-top: 50px;
-}
-
-.line {
-  font-size: 1.5em;
-  text-align: center;
-}
-
-.line hr {
-  border-top: solid 3px #00b172;
-  margin-top: 20px;
-  margin-right: auto;
-  margin-bottom: 1  0px;
-  margin-left: auto;
-  width: 25%;
-}
-
-#list {
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.container {
-  width: 1200px;
-  margin: 0 auto;
-  padding: 75px 0;
-  flex-direction: column;
-  text-align: justify;
-  height: auto;
-  margin: 0 75px 0 75px;
-}
-
-.container h2{
-  color: #00b172;
-}
-
-.container img {
-  display: inline-block;
-  background-position: center top;
-  margin-right: 30px;
-  -webkit-box-flex: 1;
-  flex-grow: 1;
-  width: 142px;
-  height: 142px;
-  margin: 0px 25px 0px 0px;
-  }
-
-.app {
-  font-size: 1.7em;
-  text-align: left;
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0 15px;
-  background-color: #00b172;
-  color: white;
-}
-
-.app div {
-  margin: 0 75px 0 75px;
-}
-
-.icon-white{
-   display: inline-block;
-  background-position: center top;
-  margin-right: 30px;
-  -webkit-box-flex: 1;
-  flex-grow: 1;
-  width: 142px;
-  height: 142px;
-  margin: 0px 25px 0px 0px;
-     
-
-}
-
-.icon-app {
-  width: 20%;
-}
-
 /*
 Colors:
-
 Text: 1A1A1A
 Green: #00B172
 White: #FFF
-
 */
+
+main {
+  margin-top: 60px;
+}
+
+body {
+  color: #1a1a1a;
+  font-family: "Signika", sans-serif;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+header {
+  position: fixed;
+  top: 0;
+  width: calc(100vw - 80px);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* margin: 0 40px; */
+  padding: 15px 40px;
+  background-color: #fff;
+}
+
+header img {
+  width: 10%;
+  height: auto;
+}
+
+header nav {
+  display: inline;
+}
+
+header ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: inline;
+}
+
+header ul li {
+  display: inline;
+  padding: 0 9px;
+}
+
+header ul li > a {
+  text-decoration: none;
+  color: #1a1a1a;
+}
+
+.hero-section {
+  background-image: url("../images/landing.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 100vw;
+  max-width: 100%;
+  height: calc(100vh - 60px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+}
+
+.hero-section h1 {
+  font-size: 65px;
+}
+
+.hero-section p {
+  font-size: 1.5em;
+  width: 550px;
+  font-weight: normal;
+  text-align: center;
+}
+
+.whats-on-spotify {
+  text-align: center;
+  margin: 25px;
+}
+
+.spotify-features {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #00b172;
+  color: #fff;
+  padding: 90px;
+}
+
+.feature-blocks {
+  width: 220px;
+  font-size: 1.1em;
+  line-height: 1.6;
+}
+
+.feature-blocks:first-of-type {
+  padding-top: 30px;
+}
+
+.spotify-white-icon {
+  width: 120px;
+  height: auto;
+}
+
+.spotify-app {
+  width: 250px;
+  height: auto;
+}
+
+.section-title {
+  padding-bottom: 5px;
+  border-bottom: 3px solid #00b172;
+  display: inline;
+}
+
+.section-title--white {
+  border-color: #fff;
+  font-size: 26px;
+  letter-spacing: 1.5px;
+}
+
+.row {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 25px;
+}
+
+.row .column {
+  text-align: center;
+  width: 200px;
+}
+
+.row .column img {
+  width: auto;
+  height: 60px;
+}
+
+.row .column h3 {
+  color: #00b172;
+  font-size: 1.5em;
+}
+
+.container {
+  margin: 0 35px;
+}
